@@ -5,4 +5,5 @@ INPUT_SCRIPT=scripts/ddl1-to-ddlm
 INPUT_DIC=tests/inputs/cif_cod.dic
 #END DEPEND--------------------------------------------------------------------
 
-${INPUT_SCRIPT} ${INPUT_DIC} | perl -lpe 's/\d{4}-\d{2}-\d{2}$/YYYY-MM-DD/'
+CURRENT_DATE=$(date +%F)
+${INPUT_SCRIPT} ${INPUT_DIC} | perl -lpe "s/${CURRENT_DATE}\$/YYYY-MM-DD/"
