@@ -4,12 +4,15 @@ cod-tools (unreleased)
     - COD::CIF::DDL:
         - setting data item '_units.code' value 'none' for data items
           without explicit units.
+        - implemented partial handling of the '_list_reference' data item in
+          the ddl1_to_ddlm() subroutine.
     - COD::CIF::DDL::DDLm::Validate:
         - updated the 'Symop' content type validation logic in accordance to
           the changes in the DDLm reference dictionary version 4.2.0.
+  * Fixed:
     - COD::CIF::DDL:
-        - implemented partial handling of the '_list_reference' data item in
-          the ddl1_to_ddlm() subroutine.
+        - ensured that the same date is set to both the '_dictionary.date' data
+          item and the most recent entry in the DICTIONARY_AUDIT loop. 
 
 cod-tools (3.8.0)
 
